fix contrast of divs and add video example

--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,62 @@
+
+
 body {
     font-style: italic;
     color: aliceblue;
-    text-shadow: 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px gold;
     background: url(math.jpg);
 }
 
-#main-titlle {
+
+
+#main-titlle{
+    
     font-size: xx-large;
+    text-shadow: 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px gold;
+
 }
 
-#main-titlle:hover {
+#main-titlle:hover{
+
     text-shadow: 0 0 10px rgb(230, 185, 71), 0 0 20px rgb(247, 227, 176), 0 0 80px rgb(247, 227, 176);
     border-color: white;
     color: white;
 }
 
-#main-box {
+#main-box{
+    
     position: relative;
     display: flex;
     width: 900px;
     height: 480px;
     padding: 30px;
     border-radius: 15px;
-
+    
 }
 
-#form-box {
+#form-box{
+    
+    text-shadow: 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px gold;
     margin-left: 100px;
-    background-image: url(math.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(math.jpg);
     width: 300px;
     height: 360px;
     padding: 5px;
     border-radius: 15px;
     box-shadow: 0 0 40px rgb(0, 0, 0), 0 0 60px rgb(50, 41, 17), 0 0 100px rgb(67, 54, 21);
 
+
+   
 }
 
 input {
+    
     border-radius: 2px;
     border-color: rgb(239, 212, 178);
     background-color: rgb(232, 188, 116);
+    
 }
-
 input:hover {
+
     background-color: rgb(247, 227, 176);
     box-shadow: 0 0 10px rgb(247, 227, 176), 0 0 20px rgb(247, 227, 176), 0 0 80px rgb(247, 227, 176);
     border-color: white;
@@ -50,22 +64,27 @@ input:hover {
 }
 
 input:focus {
+
     background-color: rgb(246, 228, 194);
+    
+
 }
 
 input::selection {
+
     background-color: rgb(237, 199, 104);
 }
 
 ::placeholder {
+
     color: rgb(93, 54, 4);
 }
-
-#sendForm {
+#sendForm{
     margin-top: 20px;
 }
+#resultdiv{
 
-#resultdiv {
+    text-shadow: 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px gold;
     position: absolute;
     margin-top: 43%;
     right: 30%;
@@ -73,24 +92,28 @@ input::selection {
     border-radius: 15px;
     width: 400px;
     box-shadow: 0 0 40px rgb(0, 0, 0), 0 0 60px rgb(50, 41, 17), 0 0 100px rgb(67, 54, 21);
-    background-image: url(math.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url(math.jpg);
+    
 }
 
-#result-title {
-    font-size: x-large;
-}
+#result-title{
 
-#resultArea {
-    font-size: xx-large;
+    font-size:x-large;
+    
 }
-
-#result-title:hover {
+#resultArea{
+    font-size:xx-large;
+}
+#result-title:hover{
+   
     text-shadow: 0 0 10px rgb(230, 185, 71), 0 0 20px rgb(247, 227, 176), 0 0 80px rgb(247, 227, 176);
     border-color: white;
     color: white;
+
 }
 
 button {
+
     position: relative;
     color: rgb(91, 58, 5);
     border-radius: 10px;
@@ -102,13 +125,17 @@ button {
 }
 
 button:hover {
+
     background-color: rgb(247, 227, 176);
     box-shadow: 0 0 10px rgb(247, 227, 176), 0 0 20px rgb(247, 227, 176), 0 0 80px rgb(247, 227, 176);
     border-color: white;
     color: rgb(209, 164, 92);
+    
 }
 
-#exemples {
+#exemples{
+
+    text-shadow: 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px rgba(116, 80, 3, 0.895), 0 0 5px gold;
     position: absolute;
     right: 150px;
     width: 300px;
@@ -116,27 +143,46 @@ button:hover {
     padding: 5px;
     border-radius: 15px;
     box-shadow: 0 0 40px rgb(0, 0, 0), 0 0 60px rgb(50, 41, 17), 0 0 100px rgb(67, 54, 21);
-    background-image: url(math.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url(math.jpg);
 }
 
 #exemples:hover {
+   
     text-shadow: 0 0 10px rgb(230, 185, 71), 0 0 20px rgb(247, 227, 176), 0 0 80px rgb(247, 227, 176);
     border-color: white;
     color: rgb(252, 251, 250);
-
+    
 }
 
-#secondtitle {
+#secondtitle{
     font-size: small;
 }
 
+
+video{
+    
+    
+    width: 350px;
+    height: 400px;
+    position: absolute;
+    margin-left: 90%;
+   
+
+}
+
+
+
+
 li {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 p.parrExamples {
     text-align: left;
 }
+
+;
 
 span {
     position: relative;
@@ -147,32 +193,42 @@ span sup {
     left: 0;
 }
 
-#Copyright {
+#Copyright{
     margin-top: 30px;
 }
 
-@media (max-width:830px) {
-    #main-box {
+
+@media (max-width:830px){
+
+    #main-box{
+        
+        
         height: 900px;
-        flex-direction: column;
+        flex-direction:column;
+
+
     }
 
-    #form-box {
+    #form-box{
+
         width: 300px;
         margin-right: 10px;
         margin-left: 50px;
+
     }
 
-    #exemples {
+    #exemples{
         margin-top: 40%;
         width: 300px;
         left: 20px;
         margin-left: 50px;
+        
     }
 
-    #resultdiv {
+    #resultdiv{
+        
         width: 280px;
         left: 20px;
         margin-left: 50px;
-    }
+    }   
 }
